--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -2,4 +2,4 @@
 
 <p>On <strong>Bookers</strong> you can share and exchange your opinions and impressions about different books.</p>
 
-<%= link_to "See Bookers", books_path %>
+<%= link_to "Start", books_path %>
