--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,5 +1,5 @@
 <h2>Editting Book</h2>
-<article class="post">
+<article>
   <% if @book.errors.any? %>
     <div class="message-box error">
       Could not save due to <%= @book.errors.count %> errors.
